tests/specs/export_class_ignore.txt
# mod.ts
/** Class doc */
export class Foobar extends Fizz implements Buzz, Aldrin {
    /** @ignore */
    private private1?: boolean;
    protected protected1: number;
    /** @ignore */
    public public1: boolean;
    public2: number;
    /** @ignore */
    override public3: string;
    /** @ignore */
    m = new Map<string, string>();
    s = "foo";
    a = [1, "foo"];
    fn = (a: string): void => {};

    /** Constructor js doc */
    /** @ignore */
    constructor(name: string, private private2: number, protected protected2: number) {}

    /** Async foo method */
    /** @ignore */
    async foo(): Promise<void> {
        //
    }

    /** Sync bar method */
    /** @ignore */
    bar?(): void {
        //
    }

    /** @ignore */
    override s() {}
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:5:5
  | 
5 |     protected protected1: number;
  |     ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:8:5
  | 
8 |     public2: number;
  |     ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:13:5
   | 
13 |     s = "foo";
   |     ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:14:5
   | 
14 |     a = [1, "foo"];
   |     ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
  --> /mod.ts:15:5
   | 
15 |     fn = (a: string): void => {};
   |     ^

# output.txt
Defined in file:///mod.ts:1:1

class Foobar extends Fizz implements Buzz, Aldrin
  Class doc

  protected protected1: number
  public2: number
  s: string
  a: (number | string)[]
  fn: (a: string) => void


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "Foobar",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 1,
            "col": 0,
            "byteIndex": 17
          },
          "declarationKind": "export",
          "jsDoc": {
            "doc": "Class doc"
          },
          "kind": "class",
          "def": {
            "isAbstract": false,
            "constructors": [],
            "properties": [
              {
                "tsType": {
                  "repr": "number",
                  "kind": "keyword",
                  "value": "number"
                },
                "readonly": false,
                "accessibility": "protected",
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "protected1",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 4,
                  "col": 4,
                  "byteIndex": 131
                }
              },
              {
                "tsType": {
                  "repr": "number",
                  "kind": "keyword",
                  "value": "number"
                },
                "readonly": false,
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "public2",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 7,
                  "col": 4,
                  "byteIndex": 213
                }
              },
              {
                "tsType": {
                  "repr": "string",
                  "kind": "keyword",
                  "value": "string"
                },
                "readonly": false,
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "s",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 12,
                  "col": 4,
                  "byteIndex": 337
                }
              },
              {
                "tsType": {
                  "repr": "",
                  "kind": "array",
                  "value": {
                    "repr": "",
                    "kind": "union",
                    "value": [
                      {
                        "repr": "number",
                        "kind": "keyword",
                        "value": "number"
                      },
                      {
                        "repr": "string",
                        "kind": "keyword",
                        "value": "string"
                      }
                    ]
                  }
                },
                "readonly": false,
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "a",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 13,
                  "col": 4,
                  "byteIndex": 352
                }
              },
              {
                "tsType": {
                  "repr": "",
                  "kind": "fnOrConstructor",
                  "value": {
                    "constructor": false,
                    "tsType": {
                      "repr": "void",
                      "kind": "keyword",
                      "value": "void"
                    },
                    "params": [
                      {
                        "kind": "identifier",
                        "name": "a",
                        "optional": false,
                        "tsType": {
                          "repr": "string",
                          "kind": "keyword",
                          "value": "string"
                        }
                      }
                    ],
                    "typeParams": []
                  }
                },
                "readonly": false,
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "fn",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 14,
                  "col": 4,
                  "byteIndex": 372
                }
              }
            ],
            "indexSignatures": [],
            "methods": [],
            "extends": "Fizz",
            "implements": [
              {
                "repr": "Buzz",
                "kind": "typeRef",
                "value": {
                  "typeParams": null,
                  "typeName": "Buzz"
                }
              },
              {
                "repr": "Aldrin",
                "kind": "typeRef",
                "value": {
                  "typeParams": null,
                  "typeName": "Aldrin"
                }
              }
            ],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  ]
}
